# CharacterDB

./: .gitignore  CLAUDE.md  Feedback.md  GEMINI.md  Plan.md  README.md  character-database-specs.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
scripts/: sync-versions.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CharacterCard.tsx  CharacterGrid.tsx  CharacterList.tsx  CharacterModal.tsx  CropModal.tsx  EmptyState.tsx  Header.tsx  LoadingScreen.tsx  ProjectModal.tsx  Sidebar.tsx  TagModal.tsx  icons.tsx  index.ts
src/lib/: database.ts  images.ts  platform.ts
src/stores/: useStore.ts
src/types/: index.ts
