[package]
name = "CharacterDB"
version = "0.1.4"
description = "A character database for writers"
authors = ["you"]
edition = "2021"

[lib]
name = "character_database_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
tauri-plugin-updater = "2.0.0"
serde_json = "1"
